Fix flexbox bug on IE bis

--- a/src/less/5-modules/_box.less
+++ b/src/less/5-modules/_box.less
@@ -3,15 +3,15 @@
 /* ----------------------------------------------------------- */
 
 .box {
-  background-color: #fff;
-  margin-bottom: 4rem;
   display: flex;
   flex-direction: column;
+  margin-bottom: 4rem;
   border: 1px solid darken(@background-color, 5%);
+  background-color: #fff;
 }
 
 .box__content {
-  flex: 1;
+  flex: 1 1 auto;
 }
 
 .box__header,
@@ -42,20 +42,21 @@
 -------------------------------------------------------------- */
 
 .box__header {
-  font-size: 2.2rem;
   border-bottom: 1px solid darken(@background-color, 8%);
+  font-size: 2.2rem;
 }
 
 /* actions
 -------------------------------------------------------------- */
 
 .box__actions {
-  border-bottom: 1px solid darken(@background-color, 8%);
   display: flex;
+  border-bottom: 1px solid darken(@background-color, 8%);
 }
 
 .box__actions > * {
   margin-right: 1rem;
+
   flex: 0 1 auto;
 }
 
